--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,1 +1,7 @@
-spring.jpa.hibernate.ddl-auto=create-drop
+medved.datasource.url:jdbc:h2:mem:test_fias
+medved.datasource.driver-class-name:org.h2.Driver
+spring.jpa.hibernate.ddl-auto:create-drop
+medved.jpa.hibernate.naming_strategy:org.hibernate.cfg.ImprovedNamingStrategy
+medved.jpa.database:H2
+medved.jpa.show-sql:true
+medved.jpa.dialect: org.hibernate.dialect.H2Dialect
