--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ dependencies{
     compile "org.springframework:spring-orm:4.2.2.RELEASE"
     compile "org.springframework.data:spring-data-jpa:1.9.0.RELEASE"
     compile "org.springframework:spring-context:4.2.2.RELEASE"
+    compile "org.springframework:spring-webmvc:4.0.7.RELEASE"
 
     compile 'org.hibernate:hibernate-search:5.5.0.Final'
     compile "org.hibernate:hibernate-entitymanager:5.0.1.Final"
