--- a/build.gradle
+++ b/build.gradle
@@ -1,38 +1,28 @@
-apply plugin: 'java'
-
-version = "0.1"
-group = 'medved'
-
-description = "FIAS"
-
-//logging.captureStandardOutput LogLevel.DEBUG
-
-repositories{
-    mavenLocal()
-    mavenCentral()
+ext{
+    projectId = ["group":"prived.medved.fias", "ver":"0.0.1"]
+    springVersion = "4.2.2.RELEASE"
 }
 
-jar {
-    baseName = 'fias'
-    version = '0.1.0'
-}
+allprojects {
+    group = projectId.group
+    version = projectId.ver
+    apply plugin:'java'
 
-dependencies{
-    compile "org.springframework:spring-orm:4.2.2.RELEASE"
-    compile "org.springframework.data:spring-data-jpa:1.9.0.RELEASE"
-    compile "org.springframework:spring-context:4.2.2.RELEASE"
-    compile "org.springframework:spring-webmvc:4.0.7.RELEASE"
+    dependencies{
+        compile "org.slf4j:slf4j-api:1.7.12"
+        compile "org.slf4j:slf4j-simple:1.7.12"
 
-    compile 'org.hibernate:hibernate-search:5.5.0.Final'
-    compile "org.hibernate:hibernate-entitymanager:5.0.1.Final"
-    compile 'javax.transaction:jta:1.1'
+        compile "org.springframework:spring-context:$springVersion"
 
-    compile "org.slf4j:slf4j-api:1.7.12"
-    compile "org.slf4j:slf4j-simple:1.7.12"
+        testCompile "com.h2database:h2:1.4.185"
+        testCompile "org.springframework:spring-test:$springVersion"
 
-    testCompile "junit:junit:4.11"
-    testCompile "com.h2database:h2:1.4.185"
-    testCompile "org.springframework:spring-test:4.2.2.RELEASE"
+    }
+
+    repositories{
+        mavenLocal()
+        mavenCentral()
+    }
 }
 
 buildscript {
@@ -40,4 +30,11 @@ buildscript {
         mavenLocal()
         mavenCentral()
     }
+}
+
+dependencies{
+    compile project(":core")
+    compile project(":common")
+    compile project(":repository:relational")
+    compile project(":admin")
 }
