--- a/repository/relational/build.gradle
+++ b/repository/relational/build.gradle
@@ -8,7 +8,10 @@ dependencies{
     compile "org.springframework.data:spring-data-jpa:1.9.0.RELEASE"
     compile 'org.hibernate:hibernate-search:5.5.0.Final'
     compile "org.hibernate:hibernate-entitymanager:5.0.1.Final"
-    compile 'javax.transaction:jta:1.1'
+
+    compile "javax.transaction:jta:1.1"
+
+    compile "com.google.guava:guava:19.0"
 
     testCompile "junit:junit:4.11"
 }
