--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,4 +1,9 @@
 dependencies {
     compile "org.springframework:spring-webmvc:$springVersion"
     compile project(":common")
+    compile "javax.servlet:javax.servlet-api:3.0.1"
+}
+
+jar{
+    baseName = "$jarBaseName-core"
 }
