--- a/core/build.gradle
+++ b/core/build.gradle
@@ -4,6 +4,8 @@ dependencies {
     compile project(":common")
     compile "javax.servlet:javax.servlet-api:3.0.1"
     compile "org.quartz-scheduler:quartz:2.2.3"
+
+    compile "com.google.guava:guava:19.0"
 }
 
 jar{
