--- a/build.gradle
+++ b/build.gradle
@@ -38,8 +38,10 @@ allprojects {
         compile "org.slf4j:slf4j-simple:1.7.12"
         compile "org.projectlombok:lombok:1.16.8"
 
+        compile "org.springframework.data:spring-data-commons:1.12.1.RELEASE"
         compile "org.springframework:spring-context:$springVersion"
         testCompile "org.springframework:spring-test:$springVersion"
+        testCompile group: 'org.testng', name: 'testng', version: '6.9.10'
 
     }
 
