--- a/repository/relational/build.gradle
+++ b/repository/relational/build.gradle
@@ -5,22 +5,25 @@ jar{
     baseName = "$jarBaseName-relational"
 }
 
+test {
+    systemProperty("spring.profiles.active", "develop")
+}
 
 dependencies{
     compile project(":common")
 
     compile "org.springframework:spring-orm:$springVersion"
-    compile "org.springframework.data:spring-data-jpa:1.9.0.RELEASE"
-    compile 'org.hibernate:hibernate-search:5.5.0.Final'
-    compile "org.hibernate:hibernate-entitymanager:5.0.1.Final"
+    compile "org.springframework.data:spring-data-jpa:1.11.0.RELEASE"
+    compile 'org.hibernate:hibernate-search:5.5.6.Final'
+    compile "org.hibernate:hibernate-entitymanager:5.0.11.Final"
 
     compile "javax.transaction:jta:1.1"
 
     compile "com.google.guava:guava:19.0"
 
-    testCompile "junit:junit:4.11"
-    testCompile "com.h2database:h2:1.4.185"
+    testCompile "junit:junit:4.12"
+    testCompile "com.h2database:h2:1.4.193"
 
-    runtime "com.h2database:h2:1.4.185"
+    runtime "com.h2database:h2:1.4.193"
 
 }
