--- a/repository/relational/src/main/resources/storage.properties
+++ b/repository/relational/src/main/resources/storage.properties
@@ -1,8 +1,1 @@
-dataSource.driver=org.h2.Driver
-dataSource.url=jdbc:h2:mem:test_fias;DB_CLOSE_DELAY=-1
-dataSource.user=sa
-dataSource.password=""
-
-hibernate.hbm2ddl.auto=create
-databasePlatform=org.hibernate.dialect.H2Dialect
-database=H2
+../../../../../src/main/resources/storage.properties
