The couple of admin RESTcontroller was born

--- a/admin/build.gradle
+++ b/admin/build.gradle
@@ -5,9 +5,10 @@ buildscript {
     }
 
 }
-
 apply plugin: 'idea'
 
-task wrapper(type: Wrapper) {
-    gradleVersion = '2.13'
+dependencies{
+    compile "org.springframework:spring-webmvc:$springVersion"
+    complie project (":common")
+    compile "com.fasterxml.jackson.core:jackson-databind:2.6.5"
 }
